--- a/ng-src/src/app/admin/admin-details/admin-details.component.html
+++ b/ng-src/src/app/admin/admin-details/admin-details.component.html
@@ -5,18 +5,20 @@
 
 <div class="section-details" *ngIf="_section">
   <div id="breadcrumb"><a [routerLink]="['/admin']">Admin</a> / {{ _section.secTitle }}</div>
-  <form [formGroup]="sectionDetailsForm" (ngSubmit)="onSectionUpdate()">
+  <form [formGroup]="sectionDetailsForm">
     <div class="editor-container">
       <input type="text" formControlName="secTitle"><br/>
       <textarea id="editor" type="hidden" formControlName="secContent"></textarea><br/>
     </div>
 
     <div class="sidebar">
-      <img [src]="_section.secImage" alt="" title="">
-      <span (click)="removeImage()" *ngIf="_section.secImage !== 'assets/img/default.jpg'">Remove Image</span>
-      <span (click)="uploadImageModal()" *ngIf="_section.secImage === '' || _section.secImage === 'assets/img/default.jpg'">Upload Image</span>
+      <div class="section-image-container">
+        <img *ngIf="_section.secImage !== ''" [src]="_section.secImage" alt="" title="" class="section-image">
+        <span *ngIf="_section.secImage !== ''" (click)="removeSectionImage()" class="remove-image">Remove Image</span>
+        <span *ngIf="_section.secImage === ''" (click)="openMediaModal()" class="upload-image">Upload Image</span>
+      </div>
       <br>
-      <button type="submit">Update</button>
+      <button type="submit" (click)="onSectionUpdate()" class="update-section">Update</button>
     </div>
 
     <div class="upload-modal" *ngIf="this.adminService.isShowUploadModal === true">
